<resources>
    <string name="app_name">Happy Places</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="view_on_map">View on Map</string>
    <string name="title_activity_page_curl">PageCurl</string>
</resources>