<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.HappyPlaces.NoActionBar"
    tools:context=".Activities.AddHappyPlace">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_place"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_olive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_place">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/main_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/dark_olive"
                app:hintTextColor="@color/dark_olive">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:hint="@string/edit_text_hint_title"
                    android:textColor="@color/dark_olive"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:boxStrokeColor="@color/dark_olive"
                app:hintTextColor="@color/dark_olive">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_description"
                    android:layout_gravity="top|start"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:textColor="@color/dark_olive"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:boxStrokeColor="@color/dark_olive"
                app:hintTextColor="@color/dark_olive">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_text_hint_date"
                    android:inputType="text"
                    android:textColor="@color/dark_olive"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:boxStrokeColor="@color/dark_olive"
                app:hintTextColor="@color/dark_olive">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_location"
                    android:layout_gravity="top|start"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:textColor="@color/dark_olive"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_place_image"
                    android:layout_width="@dimen/add_screen_place_image_size"
                    android:layout_height="@dimen/add_screen_place_image_size"
                    android:background="@drawable/shape_image_view_border"
                    android:padding="@dimen/add_screen_place_image_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_screen_image_placeholder" />

                <TextView
                    android:id="@+id/tv_add_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/add_screen_text_add_image_padding"
                    android:text="@string/text_add_image"
                    android:textColor="@color/dark_olive"
                    android:textSize="@dimen/add_screen_text_add_image_textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
                android:background="@drawable/shape_button_rounded"
                android:gravity="center"
                android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
                android:text="@string/btn_text_save"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_place_image" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
